--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "sails-hook-blueprint-filters",
-  "version": "1.0.2",
-  "description": "custom blueprint hook to get filterable fields in a model",
+  "name": "sails-hook-blueprint-associations",
+  "version": "1.0.0",
+  "description": "custom blueprint hook to get model associations",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/buraktt/sails-hook-blueprint-filters.git"
+    "url": "git+https://github.com/sercanov/sails-hook-blueprint-associations.git"
   },
   "keywords": [
     "sailsjs",
+    "hook",
+    "associations",
     "blueprint",
-    "waterline"
+    "waterline",
   ],
-  "author": "Burak Topbastekin",
+  "author": "Sercan Demircan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/buraktt/sails-hook-blueprint-filters/issues"
+    "url": "https://github.com/sercanov/sails-hook-blueprint-associations/issues"
   },
-  "homepage": "https://github.com/buraktt/sails-hook-blueprint-filters#readme",
+  "homepage": "https://github.com/sercanov/sails-hook-blueprint-associations/#readme",
   "dependencies": {
     "lodash": "3.10.1",
     "merge-defaults": "0.2.1",
